--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
     "browser-sync": "^2.18.8",
+    "cross-env": "^5.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
@@ -26,6 +28,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "html-webpack-plugin": "^2.28.0",
+    "laravel-mix": "^1.6.1",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
