--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-modules": "^1.0.8",
+    "react-parallax": "^1.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.3",
