--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "RockyBoy",
+  "name": "react_restuarant",
   "version": "1.0.0",
-  "description": "Super Cool Framework",
+  "description": "Cool Restuarant App",
   "main": "index.js",
-  "author": "joe santos garcia",
-  "license": "MIT",
-  "homepage": "http://rocky.codingphase.com/",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/petrios888/react_restuarant.git"
+  },
+  "author": "Cephas",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/petrios888/react_restuarant/issues"
+  },
+  "homepage": "https://github.com/petrios888/react_restuarant#readme",
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.17.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap-sass": "^3.3.7",
     "browser-sync": "^2.18.8",
-    "cross-env": "^5.1.1",
+    "express": "^4.16.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
@@ -28,13 +34,14 @@
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "html-webpack-plugin": "^2.28.0",
-    "laravel-mix": "^1.6.1",
-    "lodash": "^4.17.4",
-    "node-sass": "^4.5.2",
+    "jquery": "^3.2.1",
+    "moment": "^2.20.1",
+    "node-sass": "^4.6.1",
     "react": "^16.1.1",
+    "react-date-picker": "^6.6.1",
+    "react-datepicker": "^1.0.4",
     "react-dom": "^16.1.1",
     "react-modules": "^1.0.8",
-    "react-parallax": "^1.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.3",
